Fix text box position on mobile

--- a/less/site.less
+++ b/less/site.less
@@ -4846,7 +4846,7 @@ footer {
 
 @media screen and (max-width: @viewport-sm) {
   .center {
-    transform: translateY(25%);
+    transform: translateY(10%);
     p {
       font-size: 12px;
     }
